Remove robolectric